tests/nts_files/bad/link_to_none.nts
.chipsets:
input i1
output o1

.links:
o1:1 fake:1
